# osrm-trajectory-generator

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  build.sh  clean.sh  cleanMap.sh  compile.sh  generate-data.cpp
src/: generate-data.cpp
